# beavercds-ng

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  go.mod  go.sum  main  main.go  mise.toml  rcds.yaml
.devcontainer/: devcontainer.json
.github/workflows/: docs-deploy.yml  pr-checks.yml  test.yml
cmd/: build.go  deploy.go  validate.go
docs/: for-challenge-authors.md  index.md  mise.toml  package.json  pnpm-lock.yaml  repo-structure.md
docs/.vitepress/: config.mts
docs/for-authors/: challenge-config.md  challenge-reference.md  quickstart.md
docs/for-sysadmins/: architechture.md  config.md  install.md  quickstart.md
src/: cli.rs  clients.rs  commands.rs  configparser.rs  lib.rs  main.go  main.rs
src/access_handlers/: docker.rs  frontend.rs  kube.rs  mod.rs  s3.rs
src/asset_files/: rcds.yaml.j2
src/asset_files/challenge_templates/: deployment.yaml.j2  http.yaml.j2  namespace.yaml.j2  pull-secret.yaml.j2  tcp.yaml.j2
src/asset_files/setup_manifests/: cert-manager.helm.yaml  external-dns.helm.yaml  external-dns.helm.yaml.j2  helm-controller-cluster-scoped.deployment.yaml  ingress-nginx-tcp.values.yaml.j2  ingress-nginx.helm.yaml  letsencrypt.issuers.yaml
src/builder/: artifacts.rs  docker.rs  mod.rs
src/cluster_setup/: helm-controller-cluster-scoped.deployment.yaml  mod.rs
src/cluster_setup/manifests/: cert-manager.helm.yaml  cert-manager.issuers.yaml
src/cmd/: checkaccess.go  root.go
src/commands/: build.rs  check_access.rs  cluster_setup.rs  deploy.rs  init.rs  mod.rs  validate.rs
src/configparser/: challenge.rs  config.rs  field_coersion.rs  mod.rs
src/deploy/: frontend.rs  kubernetes.rs  mod.rs  s3.rs
src/deploy/kubernetes/: mod.rs  templates.rs
src/init/: example_values.rs  mod.rs  templates.rs
src/lib/: build.rs  check_access.rs  configloader.go  configparser.rs  deploy.rs  validate.rs
src/templates/: http.yaml  tcp.yaml  tcp.yaml.j2
src/templates/examples/: http.yaml  tcp.yaml
src/tests/: mod.rs  parsing.rs
src/tests/parsing/: challenges.rs  config.rs
src/utils/: mod.rs
tests/: README.md  common.rs  config_parsing.rs  docker-compose.testregistry.yaml  infra.rs  integration_tests.rs  registry.k3d.yaml  services.compose.yaml  setup.sh  test_access.rs  test_build.rs
tests/bad_challenge_config/: rcds.yaml
tests/bad_challenge_config/misc/partial/: challenge.yaml
tests/check_access/: main.rs  test_registry.rs
tests/no_challenges/: rcds.yaml
tests/repo/: rcds.yaml
tests/repo/misc/garf/: challenge.yaml
tests/repo/pwn/notsh/: .gitignore  Dockerfile  Makefile  build-artifacts  challenge.yaml  flag
tests/repo/pwn/notsh/container_src/: banner_fail  run_chal.sh  xinetd.conf
tests/repo/pwn/notsh/src/: bestpwn.c
tests/repo/web/bar/: Containerfile  challenge.yaml
tests/repo/web/bar/site_source/: flag  index.html
