[package]
name = "beavercds-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["unicode", "env", "derive"] }
clap-verbosity-flag = "2.2.0"
itertools = "0.12.1"
rust_search = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tera = "1.19.1"
simplelog = { version = "0.12.2", features = ["paris"] }
fully_pub = "0.1.4"

# kubernetes:
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
