[package]
name = "beavercds-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["unicode", "env", "derive"] }
clap-verbosity-flag = "2.2.0"
itertools = "0.12.1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_nested_with = "0.2.5"
simplelog = { version = "0.12.2", features = ["paris"] }
fully_pub = "0.1.4"
void = "1"
futures = "0.3.30"
figment = { version = "0.10.19", features = ["env", "yaml", "test"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

# kubernetes:
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
http = { version = "1.2", default-features = false }

# docker:
bollard = "0.16.1"
tar = "0.4.42"
tempfile = "3.13.0"
rust-s3 = { version = "0.35.1", default-features = false, features = [
  "fail-on-err",
  "tokio-rustls-tls",
] }
minijinja = { version = "2.6.0", features = ["json"] }
duct = "0.13.7"
fastrand = "2.3.0"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[dev-dependencies]
pretty_assertions = "1.4.1"
